Project1/force-app/main/default/objects/Demographic_Profile__c/Demographic_Profile__c.object-meta.xml
<CustomObject>
    <label>Demographic Profile</label>
    <nameField>
        <label>Demographic Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demographic Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>