Project1/force-app/main/default/objects/Demographic_Profile__c/fields/Demographic_Group__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Group__c</fullName>
    <label>Demographic Group</label>
    <referenceTo>Demographic_Group__c</referenceTo>
    <relationshipLabel>Profiles</relationshipLabel>
    <relationshipName>Demographic_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>