Project1/force-app/main/default/objects/Demographic_Profile__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>