Project1/force-app/main/default/objects/Demographic_Profile__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aarakocra</fullName>
            </value>
            <value>
                <fullName>Centaur</fullName>
            </value>
            <value>
                <fullName>Dragonborn</fullName>
            </value>
            <value>
                <fullName>Dwarf</fullName>
            </value>
            <value>
                <fullName>Elf</fullName>
            </value>
            <value>
                <fullName>Gnome</fullName>
            </value>
            <value>
                <fullName>Goliath</fullName>
            </value>
            <value>
                <fullName>Orc</fullName>
            </value>
            <value>
                <fullName>Warforged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>