Project1/force-app/main/default/objects/Demographic_Profile__c/validationRules/Max_Level_is_20.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Level_is_20</fullName>
    <active>true</active>
    <description>The maximum level is 20 for anyone.</description>
    <errorConditionFormula>Level__c  &gt; 20  ||  Level__c  &lt; 1</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>The level must be between 1 and 20</errorMessage>
</ValidationRule>